import * as React from 'react';
import renderer from 'react-test-renderer';
import FormInputRadio from './FormInputRadio';

describe('FormInputRadio component snapshot', () => {
  const name = 'loremIpsum';
  const title = 'Lorem Ipsum';
  const onChange = jest.fn();

  it('renders correctly with a single input', () => {
    const selectedOption = 'lorem';
    const options = [{ value: 'lorem', label: 'Lorem' }];
    const component = renderer.create(
      <FormInputRadio
        name={name}
        title={title}
        options={options}
        selectedOption={selectedOption}
        onChange={onChange}
      />
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders correctly with multiple inputs', () => {
    const selectedOption = 'dolorSitAmet';
    const options = [
      { value: 'lorem', label: 'Lorem' },
      { value: 'ipsum', label: 'Ipsum' },
      { value: 'dolorSitAmet', label: 'Dolor Sit Amet' },
    ];
    const component = renderer.create(
      <FormInputRadio
        name={name}
        title={title}
        options={options}
        selectedOption={selectedOption}
        onChange={onChange}
      />
    );
    let tree = component.toJSON();
    expect(tree).toMatchSnapshot();
  });
});
